// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test view of markdown redactor 1`] = `
<DocumentFragment>
  <div>
    <div
      class="markdown-redactor "
    >
      <div
        class="markdown-redactor__write-zone"
      >
        <button
          class="button default-button success-button"
        >
          view
        </button>
        <textarea
          class="textarea"
          name="text"
          placeholder="Text"
        />
      </div>
      <div
        class="markdown-redactor__view-zone markdown-body"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Test view of markdown redactor full screen 1`] = `
<DocumentFragment>
  <div>
    <div
      class="markdown-redactor markdown-redactor_big"
    >
      <div
        class="markdown-redactor__write-zone"
      >
        <button
          class="button default-button danger-button"
        >
          close
        </button>
        <textarea
          class="textarea"
          name="text"
          placeholder="Text"
        />
      </div>
      <div
        class="markdown-redactor__view-zone markdown-body"
      />
    </div>
  </div>
</DocumentFragment>
`;
